Prevent layout shifting when font is applied

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @font-face {
+    font-display: optional;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 100;
